# IVS-proj2

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  hodnoceni.txt  odevzdani.txt  profiling.cpp  skutecnost.txt
.github/workflows/: cmake-multi-platform.yml
libs/: mathlib.h  mathlib.hpp
plan/: xgeierd00_xmokrup00_xcernoa00_xjelinl00_plan.txt
src/: .gitignore  CMakeLists.txt  Doxyfile  calc.cpp  interface.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathlib.cpp  mathlib.h  mathlib.hpp
src/GUI/: CMakeLists.txt  UntitledProject.qmlproject  mainwindow.cpp  mainwindow.h  qmlmodules  qtquickcontrols2.conf
src/GUI/content/: App.qml  Screen01.ui.qml  Screen01.ui.qml.autosave
src/GUI/imports/UntitledProject/: CMakeLists.txt  qmldir
src/gui/: .gitignore  CMakeLists.txt  UntitledProject.qmlproject.qtds  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/content/: CMakeLists.txt
src/gui/src/: import_qml_plugins.h
src/linux/: HugoCalc.desktop  preun
src/linux/hugocalc/: HugoCalc.desktop
src/linux/profile/: postinst  prof.desktop
src/profiling/: data.txt  profiling.cpp
src/test/: CMakeLists.txt  Makefile  test_mathlib  test_mathlib.cpp
test/: MakeFile  Makefile  test_mathlib.cpp
